<resources>
    <string name="app_name">My Application</string>
    <string name="str_title_home">Home</string>
    <string name="str_title_shop">Shop</string>
    <string name="str_title_sell_or_buy">Sell or Buy</string>
    <string name="str_my_ads_u"><u>My Ads</u></string>
    <string name="str_my_ads">My Ads</string>
    <string name="str_my_cart">My Cart</string>
    <string name="str_own_requirement">Own Requirement</string>
    <string name="str_your_requirement">Your Requirement</string>

    <!--API ERROR MSGS-->
    <string name="GENERIC_WEB_ERROR_204">No content found</string>
    <string name="GENERIC_WEB_ERROR_400">Incorrect Request</string>
    <string name="GENERIC_WEB_ERROR_404">Not Found</string>
    <string name="GENERIC_WEB_ERROR_422">Unprocessable Entity</string>
    <string name="GENERIC_WEB_ERROR_401">Unauthorized</string>
    <string name="GENERIC_WEB_ERROR_500">Server Internal Error</string>
    <string name="GENERIC_WEB_ERROR_DEFAULT">Server not responding</string>
    <string name="str_no_internet_connection">No Internet Connection</string>
    <string name="str_error_occured_please_try_again">Error occured please try again...</string>
    <!--API ERROR MSGS-->

    <string name="PLEASE_WAIT_MSG"> Please wait&#8230;</string>
    <string name="str_invalid_data">Invalid Data</string>
    <string name="str_success_uppercase">SUCCESS</string>
    <string name="str_token_uppercase">TOKEN</string>
    <string name="str_buy_sell_id_uppercase">BUY_SELL_ID</string>
    <string name="str_no_information_found">No Information Found</string>
    <string name="str_rs">\u20B9</string>
    <string name="str_description">Description</string>
    <string name="str_year_">Year:</string>
    <string name="str_register_no_">Register No:</string>
    <string name="str_km_driven_">KM Driven:</string>
    <string name="str_ad_id_">Ad ID:</string>
    <string name="str_report_this_ad_"><u>Report this Ad</u></string>
    <string name="str_call_">Call</string>
    <string name="str_lorem">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremq laudantium, totam rem aperiam eaque ipsa, quae ab illo.</string>
    <string name="str_brand_name">Brand Name*</string>
    <string name="str_year">Year*</string>
    <string name="str_ad_title">Ad Title</string>
    <string name="str_describe_what_you_are_selling">Describe what you are selling*</string>
    <string name="str_title_create_new_ad">Create New Ad</string>
    <string name="str_price">Price</string>
    <string name="str_kms_driven">KMS Driven</string>
    <string name="str_submit">Submit</string>
    <string name="str_location">Location*</string>
    <string name="str_upload_pictures_of_your_bike">Upload pictures of your bike</string>
    <string name="title_activity_main3">Main3Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select">Select</string>
    <string name="str_please_select_manufacturer">Please Select Manufacturer</string>
    <string name="str_please_select_model">Please Select Model</string>
    <string name="str_please_enter_year">Please Enter Year</string>
    <string name="str_please_enter_ad_title">Please Enter Ad Title</string>
    <string name="str_please_enter_describe">Please Enter Describe</string>
    <string name="str_please_enter_price">Please Enter Price</string>
    <string name="str_please_enter_kms_driven">Please Enter KMS Driven</string>
    <string name="str_please_enter_location">Please Enter Location</string>
    <string name="str_n_items_in_your_cart">%d items in your cart</string>
    <string name="str_pay_now">Pay Now</string>
    <string name="str_total">Total</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_msg_do_you_want_to_delete_this_item_">Do you want to delete this item?</string>
    <string name="str_msg_own_requirements">You can order your own requirement by uploading maximum 5 pictures and by giving short brief about your requirement.</string>
    <string name="str_msg_please_upload_picture">Please take or upload picture of your requirement</string>
    <string name="str_msg_brief_description">Brief description about your requirement</string>
    <string name="str_number_of_items">Number of items</string>
    <string name="str_take_picture">Take Picture</string>
    <string name="str_upload_picture">Upload Picture</string>
</resources>
