<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_lilac">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:text="@string/str_title_create_new_ad"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/tilBrandName"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textColorHint="@color/grey">-->

        <!--            <EditText-->
        <!--                android:id="@+id/etBrandName"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="40dp"-->
        <!--                android:layout_margin="10dp"-->
        <!--                android:layout_weight="1"-->
        <!--                android:hint="@string/str_brand_name"-->
        <!--                android:imeOptions="actionNext"-->
        <!--                android:importantForAutofill="no"-->
        <!--                android:inputType="text"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textColorHint="@color/grey"-->
        <!--                android:textSize="15sp" />-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <Spinner
            android:id="@+id/spnManufacturer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/spinner_bg"
            android:gravity="center"
            android:prompt="@string/select"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spnModel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/spinner_bg"
            android:gravity="center"
            android:prompt="@string/select"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/str_year"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/etAdTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/str_ad_title"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"

            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/etDescribe"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/str_describe_what_you_are_selling"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:text="@string/str_upload_pictures_of_your_bike"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/pale_lilac"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAddImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_org_camera_plus"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/ivShowImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_cornor_grey_border"
                android:padding="20dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/str_price"
                android:imeOptions="actionNext|actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilKMSDriven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/etKMSDriven"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/str_kms_driven"
                android:imeOptions="actionNext|actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/transparent"
                android:textColorHint="@color/grey">

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:hint="@string/str_location"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:src="@drawable/ic_org_location_pin"
                android:layout_width="30dp"
                android:layout_margin="5dp"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_height="30dp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btnSubmitNewAd"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_cornor_blue"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/str_submit"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
